--- a/create-post.html
+++ b/create-post.html
@@ -74,7 +74,7 @@
     form textarea:focus,
     form input[type="file"]:focus {
       outline: none;
-      border-color: #e60023;
+      border-color: #a70817;
       box-shadow: 0 0 5px rgba(230, 0, 35, 0.3);
     }
 
@@ -99,7 +99,7 @@
     }
 
     .form-button:hover {
-      background-color: #dc3545;
+      background-color: #a70817;
     }
 
     /* Responsive Design */
@@ -142,6 +142,9 @@
     </form>
   </div>
 </div>
+<footer>
+  <p>&copy; 2025 Blogify. All rights reserved.</p>
+</footer>
 
   <script>
     document.getElementById("create-post-form").addEventListener("submit", async (event) => {
