--- a/profile.html
+++ b/profile.html
@@ -46,8 +46,8 @@
 
     .button-27:hover {
       box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-      background-color: #dc3545;
-      border: 2px solid #dc3545;
+      background-color: #a70817;
+      border: 2px solid #a70817;
     }
 
     .container-wrap {
