--- a/signup.html
+++ b/signup.html
@@ -62,7 +62,7 @@
   }
 
   .input-group label i {
-    color: #dc3545;
+    color: #a70817;
     margin-right: 5px;
   }
 
@@ -81,7 +81,7 @@
   input[type="text"]:focus,
   input[type="email"]:focus,
   input[type="password"]:focus {
-    border-color:#dc3545;
+    border-color:#a70817;
   }
 
   .btn {
@@ -113,7 +113,7 @@
   }
 
   .btn:hover {
-    background-color: #dc3545;
+    background-color: #a70817;
   }
 
   .google-btn {
@@ -124,7 +124,7 @@
   }
 
   .google-btn:hover {
-    background-color: #c33d2f;
+    background-color: #a70817;
   }
 
   .google-btn i {
