--- a/signin.html
+++ b/signin.html
@@ -43,7 +43,7 @@
     margin-bottom: 20px;
   }
   .input-group label i {
-    color: #dc3545;
+    color: #a70817;
     margin-right: 5px;
   }
 
@@ -72,7 +72,7 @@
 
   input[type="email"]:focus,
   input[type="password"]:focus {
-    border-color: #dc3545;
+    border-color: #a70817;
   }
 
   .btn {
@@ -91,7 +91,7 @@
   }
 
   .btn:hover {
-    background-color: #dc3545;
+    background-color: #a70817;
   }
 
   hr {
