--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,8 @@
   <title>Sign Up</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="assets/images/profile.png">
+
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -218,12 +220,15 @@
       <p id="modal-message"></p>
     </div>
   </div>
+
   <footer>
     <p>&copy; 2025 Blogify. All rights reserved.</p>
   </footer>
+
 </body>
 
 
+  <script src="js/auth.js"></script>
 
 <script>
   const passwordInput = document.getElementById('signup-password');
