--- a/view-post.html
+++ b/view-post.html
@@ -88,10 +88,15 @@
     }
 
     textarea {
-      width: 100%;
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 13px;
+    resize: none;
+    height: 70px;
+    font-size: 16px;
+}
+
 
     button {
       cursor: pointer;
@@ -134,6 +139,10 @@
       font-size: 14px;
       color: #555;
     }
+    .post-meta button span {
+    margin-left: 3px;
+    margin-top: 2px;
+}
   </style>
 </head>
 
