--- a/signin.html
+++ b/signin.html
@@ -14,11 +14,23 @@
   <script src="js/firebase-config.js"></script>
   <script src="js/navigation.js"></script>
   <script src="js/auth.js"></script>
+
+   <!-- font links -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+     rel="stylesheet">
+   <!-- nunito -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+     rel="stylesheet">
 </head>
 <style>
    
   .wrapper {
-    font-family: Arial, sans-serif;
+    font-family: 'playfair display', serif;
+   
     background-color: #f9f9f9;
     margin: 0;
     padding: 0;
