--- a/signin.html
+++ b/signin.html
@@ -136,6 +136,7 @@
   /* Modal content */
   .modal-content {
     background-color: #fff;
+    color: black;
     margin: 15% auto;
     padding: 20px;
     border-radius: 10px;
