--- a/home.html
+++ b/home.html
@@ -209,8 +209,9 @@
     }
 
     .img-post {
-      height: 38%;
-    }
+    height: 38%;
+    cursor: pointer;
+}
 
     .content-header h2 {
       text-transform: capitalize;
